fix() add collapse in offcanva

--- a/public/style/Landing-page.scss
+++ b/public/style/Landing-page.scss
@@ -138,3 +138,12 @@
     }
 
 }
+
+.rotate-icon {
+    transition: transform 0.3s ease;
+}
+
+.collapse.show + .rotate-icon,
+a[aria-expanded="true"] .rotate-icon {
+    transform: rotate(180deg);
+}
